use ${jetty.version} for the version rather than the too generic ${revision}
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
     <mavenPluginToolsVersion>3.5.2</mavenPluginToolsVersion>
     <mavenVersion>3.5.0</mavenVersion>
     <src.dir>${basedir}/src/main/java</src.dir>
-    <revision>9.4.11-SNAPSHOT</revision>
+    <jetty.version>9.4.11-SNAPSHOT</jetty.version>
+    <revision>${jetty.version}</revision>
   </properties>
 
   <licenses>
